// Copyright (c) 2020 IndyKite
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package indykite.objects.v1beta1;

option csharp_namespace = "Id.Indykite.Jarvis.Objects";
option go_package = "github.com/indykite/jarvis/pkg/proto-gen/objects";
option java_multiple_files = true;
option java_outer_classname = "IdProto";
option java_package = "com.id.indykite.jarvis.objects";
option objc_class_prefix = "IIJO";
option php_namespace = "Id\\Indykite\\Jarvis\\Objects";

// Identifier is a universally unique identifier (UUID) a 128-bit number used to identify information in system.
message Identifier {
  oneof id {
    //String representation of an RFC4122 compliant UUID.
    string id_string = 7;
    //Byte[16] array representation of an RFC4122 compliant UUID.
    bytes id_bytes = 8;
  }
}

// ObjectReference ...
message ObjectReference {
  //UUID of the top level Customer.
  Identifier customer_id = 1;
  //UUID of Application Space in Customer.
  Identifier app_space_id = 2;
  //UUID of Application in Application Space.
  Identifier app_id = 3;
  //UUID of Tenant in Application Space.
  Identifier tenant_id = 4;
  //Gives a hint about what the identifier refers to. Usually a URL to the schema of the target object.
  string type_hint = 6;
  //UUID of Object to refer to.
  Identifier id = 7;
}
